Fix footer style on mobile view

--- a/styles.css
+++ b/styles.css
@@ -177,7 +177,6 @@
   position: absolute;
   top: 0;
   left: 80px;
-  padding-right: 80px;
 }
 
 .h4-span {
@@ -352,12 +351,20 @@
 
 .footer1 {
   background-color: #131313;
-  padding: 3em 20px 2em;
+  padding: 3em 0px 2em;
+  width: 100%;
+}
+
+.flex-center {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .social {
   margin: 10px 0 25px 0;
   padding: 10px 0;
+  width: 100%;
 }
 
 .social-links {
@@ -368,6 +375,8 @@
   border-radius: 50%;
   padding: 10px;
   background-color: #555;
+  width: 40px;
+  height: 40px;
 }
 
 .social-links:hover {
@@ -378,7 +387,7 @@
   text-decoration: none;
   color: #aaa;
   font-size: 13px;
-  padding: 0 5px;
+  padding: 5px;
 }
 
 .footer-links:hover {
